--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,10 @@ dependencies = [
     "playwright==1.54.0",
     "camoufox==0.4.11"
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.6.7",
+    "debugpy==1.8.15",
+    "pyright==1.1.404"
+]
